--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,11 @@ body {
 button {
   margin-right: 10px;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 30px;
+  margin-left: 10px;
+}
